Add settings functionality

--- a/src/index.html
+++ b/src/index.html
@@ -249,20 +249,20 @@
           <h2 class="settings__title">Settings</h2>
 
           <div class="settings__body">
-            <label class="settings__label">Pomodoro Length
-              <input class="settings__input" type="number" min="1" step="1" placeholder="Number of minutes">
+            <label class="settings__label">Task Duration
+              <input class="settings__input" name="taskDuration" type="number" min="1" step="1" placeholder="Number of minutes" required>
             </label>
 
-            <label class="settings__label">Short Break Length
-              <input class="settings__input" type="number" min="1" step="1" placeholder="Number of minutes">
+            <label class="settings__label">Short Break
+              <input class="settings__input" name="shortBreak" type="number" min="1" step="1" placeholder="Number of minutes" required>
             </label>
 
-            <label class="settings__label">Long Break Length
-              <input class="settings__input" type="number" min="1" step="1" placeholder="Number of minutes">
+            <label class="settings__label">Long Break
+              <input class="settings__input" name="longBreak" type="number" min="1" step="1" placeholder="Number of minutes" required>
             </label>
 
             <label class="settings__label">Long Break After
-              <input class="settings__input" type="number" min="1" step="1" placeholder="Number of pomodoros">
+              <input class="settings__input" name="longBreakAfter" type="number" min="1" step="1" placeholder="Number of pomodoros" required>
             </label>
           </div>
 
