--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,13 @@
 
       <form class="form">
         <div class="form__input-wrapper">
-          <input class="form__input" type="text" name="description" placeholder="Add a task, press Enter to save...">
+          <input
+            class="form__input"
+            type="text"
+            name="description"
+            placeholder="Add a task, press Enter to save..."
+            autocomplete="off"
+          >
 
           <div class="form__addon">
             <div class="form__counter counter">
@@ -86,29 +92,46 @@
               </div>
             </div>
 
-            <select class="form__choices choices" id="priority" name="priority">
+            <label class="visually-hidden" for="priority">Task priority</label>
+            <select class="form__choices choices" name="priority" id="priority">
               <option
                 value="no-priority"
-                data-custom-properties='{"url": "img/sprite.svg#priority", "class": "choices__icon no-priority", "label": "no priority"}'
+                data-custom-properties="{
+                  &quot;url&quot;: &quot;img/sprite.svg#priority&quot;,
+                  &quot;class&quot;: &quot;choices__icon no-priority&quot;,
+                  &quot;label&quot;: &quot;no priority&quot;
+                }"
                 selected
               >
                 no priority
               </option>
               <option
                 value="high"
-                data-custom-properties='{"url": "img/sprite.svg#priority", "class": "choices__icon high", "label": "high priority"}'
+                data-custom-properties="{
+                  &quot;url&quot;: &quot;img/sprite.svg#priority&quot;,
+                  &quot;class&quot;: &quot;choices__icon high&quot;,
+                  &quot;label&quot;: &quot;high priority&quot;
+                }"
               >
                 high priority
               </option>
               <option
                 value="medium"
-                data-custom-properties='{"url": "img/sprite.svg#priority", "class": "choices__icon medium", "label": "medium priority"}'
+                data-custom-properties="{
+                  &quot;url&quot;: &quot;img/sprite.svg#priority&quot;,
+                  &quot;class&quot;: &quot;choices__icon medium&quot;,
+                  &quot;label&quot;: &quot;medium priority&quot;
+                }"
               >
                 medium priority
               </option>
               <option
                 value="low"
-                data-custom-properties='{"url": "img/sprite.svg#priority", "class": "choices__icon low", "label": "low priority"}'
+                data-custom-properties="{
+                  &quot;url&quot;: &quot;img/sprite.svg#priority&quot;,
+                  &quot;class&quot;: &quot;choices__icon low&quot;,
+                  &quot;label&quot;: &quot;low priority&quot;
+                }"
               >
                 low priority
               </option>
