--- a/src/index.html
+++ b/src/index.html
@@ -32,15 +32,8 @@
 
             <div class="form__addon">
               <div class="form__counter counter">
-                <input class="counter__radio" type="radio" name="counter" id="counter-1" value="1">
-                <label class="counter__label" for="counter-1">
-                  <svg aria-hidden="true">
-                    <use href="img/sprite.svg#alarm"></use>
-                  </svg>
-                </label>
-
-                <input class="counter__radio" type="radio" name="counter" id="counter-2" value="2">
-                <label class="counter__label" for="counter-2">
+                <input class="counter__radio" type="radio" name="counter" id="counter-4" value="4">
+                <label class="counter__label" for="counter-4">
                   <svg aria-hidden="true">
                     <use href="img/sprite.svg#alarm"></use>
                   </svg>
@@ -53,8 +46,15 @@
                   </svg>
                 </label>
 
-                <input class="counter__radio" type="radio" name="counter" id="counter-4" value="4">
-                <label class="counter__label" for="counter-4">
+                <input class="counter__radio" type="radio" name="counter" id="counter-2" value="2">
+                <label class="counter__label" for="counter-2">
+                  <svg aria-hidden="true">
+                    <use href="img/sprite.svg#alarm"></use>
+                  </svg>
+                </label>
+
+                <input class="counter__radio" type="radio" name="counter" id="counter-1" value="1">
+                <label class="counter__label" for="counter-1">
                   <svg aria-hidden="true">
                     <use href="img/sprite.svg#alarm"></use>
                   </svg>
@@ -371,7 +371,18 @@
       <div class="timer" data-timer-deadline="1">
         <h2 class="timer__title">Course. Focus To Do: design.</h2>
         <div class="timer__content">
-          <div class="timer__progress"></div>
+          <svg class="timer__progress" viewBox="0 0 240 240">
+            <defs>
+              <linearGradient id="gradient">
+                <stop offset="0%" stop-color="rgb(255 175 175 / 0.9)" />
+                <stop offset="100%" stop-color="rgb(255 175 175 / 0.9)" />
+              </linearGradient>
+            </defs>
+            <g id="ticks">
+              <line x1="120" y1="6" x2="120" y2="18" stroke="rgb(255 255 255 / 0.2)" stroke-width="4.5" stroke-linecap="round" />
+            </g>
+            <circle class="timer__circle" stroke="url(#gradient)"/>
+          </svg>
           <span class="timer__time">25:00</span>
         </div>
         <button class="timer__button button button--accent" type="button">Start</button>
