--- a/src/index.html
+++ b/src/index.html
@@ -32,14 +32,31 @@
 
             <div class="form__addon">
               <div class="form__counter counter">
-                <input class="counter__radio" type="radio" name="counterValue" id="counter-1" value="1">
-                <label class="counter__label selected" for="counter-1">
+                <span class="counter__alarm selected">
                   <svg aria-hidden="true">
                     <use href="img/sprite.svg#alarm"></use>
                   </svg>
-                </label>
+                </span>
 
-                <input class="counter__radio" type="radio" name="counterValue" id="counter-2" value="2">
+                <span class="counter__alarm">
+                  <svg aria-hidden="true">
+                    <use href="img/sprite.svg#alarm"></use>
+                  </svg>
+                </span>
+
+                <span class="counter__alarm">
+                  <svg aria-hidden="true">
+                    <use href="img/sprite.svg#alarm"></use>
+                  </svg>
+                </span>
+
+                <span class="counter__alarm">
+                  <svg aria-hidden="true">
+                    <use href="img/sprite.svg#alarm"></use>
+                  </svg>
+                </span>
+
+                <!-- <input class="counter__radio" type="radio" name="counterValue" id="counter-2" value="2">
                 <label class="counter__label" for="counter-2">
                   <svg aria-hidden="true">
                     <use href="img/sprite.svg#alarm"></use>
@@ -58,15 +75,15 @@
                   <svg aria-hidden="true">
                     <use href="img/sprite.svg#alarm"></use>
                   </svg>
-                </label>
+                </label> -->
 
-                <button class="counter__open-popup" type="button" aria-label="Open counter popup">
+                <button class="counter__toggle-popup" type="button" aria-label="Open counter popup">
                   <svg aria-hidden="true">
                     <use href="img/sprite.svg#more-counter"></use>
                   </svg>
                 </button>
 
-                <div class="counter__popup">
+                <div class="counter__popup" aria-haspopup="true" aria-expanded="false">
                   <button
                     class="counter__button counter__decrease button button--accent"
                     type="button"
