style: Update background and colors
* Add background-image to the body element
* Update --accent and --gray-dark color variables
* Adjust blur effect
* Increase padding-top for the app__content
* Hide the title element (add class visually-hidden for h1)

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
           </svg>
         </button>
 
-        <h1 class="app__title">Focus To Do</h1>
+        <h1 class="app__title visually-hidden">Focus To Do</h1>
 
         <form class="form">
           <div class="form__input-wrapper">
