feat: Implement task management
* Task and TaskList models for data management.
* TaskListView for rendering the task list.
* TaskListController for handling user interactions and updating the model.
* Integration with the form controller for adding tasks.
* Implementation of task deletion.

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
             <input
               class="form__input"
               type="text"
-              name="description"
+              name="name"
               placeholder="Add a task, press Enter to save..."
               autocomplete="off"
               minlength="1"
@@ -57,27 +57,6 @@
                     <use href="img/sprite.svg#alarm"></use>
                   </svg>
                 </span>
-
-                <!-- <input class="counter__radio" type="radio" name="counterValue" id="counter-2" value="2">
-                <label class="counter__label" for="counter-2">
-                  <svg aria-hidden="true">
-                    <use href="img/sprite.svg#alarm"></use>
-                  </svg>
-                </label>
-
-                <input class="counter__radio" type="radio" name="counterValue" id="counter-3" value="3">
-                <label class="counter__label" for="counter-3">
-                  <svg aria-hidden="true">
-                    <use href="img/sprite.svg#alarm"></use>
-                  </svg>
-                </label>
-
-                <input class="counter__radio" type="radio" name="counterValue" id="counter-4" value="4">
-                <label class="counter__label" for="counter-4">
-                  <svg aria-hidden="true">
-                    <use href="img/sprite.svg#alarm"></use>
-                  </svg>
-                </label> -->
 
                 <button class="counter__toggle-popup" type="button" aria-label="Open counter popup">
                   <svg aria-hidden="true">
@@ -159,193 +138,7 @@
           </div>
         </form>
 
-        <div class="no-tasks">
-          <img class="no-tasks__image" src="img/no-tasks.svg" alt="Task list is empty">
-        </div>
-
-        <table class="tasks" aria-label="Tasks">
-          <tbody class="tasks__rows">
-            <tr class="task">
-              <td class="task__data task__complete">
-                <label class="task__checkbox checkbox">
-                  <input class="checkbox__input" type="checkbox" name="checkbox">
-                </label>
-              </td>
-              <td class="task__data task__start">
-                <button class="task__button button" type="button" aria-label="Start focus">
-                  <svg aria-hidden="true">
-                    <use href="img/sprite.svg#start"></use>
-                  </svg>
-                </button>
-              </td>
-              <td class="task__data task__description">
-                <p class="task__name">Course. Focus To Do: design.</p>
-                <div class="task__pomodoro">
-                  <svg class="task__pomodoro-priority high" aria-hidden="true">
-                    <use href="img/sprite.svg#priority"></use>
-                  </svg>
-                  <span class="task__pomodoro-done">0</span>
-                  <span class="task__pomodoro-divide">/</span>
-                  <div class="task__pomodoro-total">
-                    <svg aria-hidden="true">
-                      <use href="img/sprite.svg#alarm"></use>
-                    </svg>
-                    <span class="task__pomodoro-number">4</span>
-                  </div>
-                </div>
-              </td>
-              <td class="task__data task__edit">
-                <button class="task__button button button--transparent" type="button" aria-label="Edit task">
-                  <svg aria-hidden="true">
-                    <use href="img/sprite.svg#edit"></use>
-                  </svg>
-                </button>
-              </td>
-              <td class="task__data task__delete">
-                <button class="task__button button button--transparent" type="button" aria-label="Delete task">
-                  <svg aria-hidden="true">
-                    <use href="img/sprite.svg#trash"></use>
-                  </svg>
-                </button>
-              </td>
-            </tr>
-
-            <tr class="task">
-              <td class="task__data task__complete">
-                <label class="task__checkbox checkbox">
-                  <input class="checkbox__input" type="checkbox" name="checkbox">
-                </label>
-              </td>
-              <td class="task__data task__start">
-                <button class="task__button button" type="button" aria-label="Start focus">
-                  <svg aria-hidden="true">
-                    <use href="img/sprite.svg#start"></use>
-                  </svg>
-                </button>
-              </td>
-              <td class="task__data task__description">
-                <p class="task__name">English. Lessons and "Friends".</p>
-                <div class="task__pomodoro">
-                  <svg class="task__pomodoro-priority medium" aria-hidden="true">
-                    <use href="img/sprite.svg#priority"></use>
-                  </svg>
-                  <span class="task__pomodoro-done">0</span>
-                  <span class="task__pomodoro-divide">/</span>
-                  <div class="task__pomodoro-total">
-                    <svg aria-hidden="true">
-                      <use href="img/sprite.svg#alarm"></use>
-                    </svg>
-                    <span class="task__pomodoro-number">4</span>
-                  </div>
-                </div>
-              </td>
-              <td class="task__data task__edit">
-                <button class="task__button button button--transparent" type="button" aria-label="Edit task">
-                  <svg aria-hidden="true">
-                    <use href="img/sprite.svg#edit"></use>
-                  </svg>
-                </button>
-              </td>
-              <td class="task__data task__delete">
-                <button class="task__button button button--transparent" type="button" aria-label="Delete task">
-                  <svg aria-hidden="true">
-                    <use href="img/sprite.svg#trash"></use>
-                  </svg>
-                </button>
-              </td>
-            </tr>
-
-            <tr class="task">
-              <td class="task__data task__complete">
-                <label class="task__checkbox checkbox">
-                  <input class="checkbox__input" type="checkbox" name="checkbox">
-                </label>
-              </td>
-              <td class="task__data task__start">
-                <button class="task__button button" type="button" aria-label="Start focus">
-                  <svg aria-hidden="true">
-                    <use href="img/sprite.svg#start"></use>
-                  </svg>
-                </button>
-              </td>
-              <td class="task__data task__description">
-                <p class="task__name">Reading.</p>
-                <div class="task__pomodoro">
-                  <svg class="task__pomodoro-priority low" aria-hidden="true">
-                    <use href="img/sprite.svg#priority"></use>
-                  </svg>
-                  <span class="task__pomodoro-done">0</span>
-                  <span class="task__pomodoro-divide">/</span>
-                  <div class="task__pomodoro-total">
-                    <svg aria-hidden="true">
-                      <use href="img/sprite.svg#alarm"></use>
-                    </svg>
-                    <span class="task__pomodoro-number">4</span>
-                  </div>
-                </div>
-              </td>
-              <td class="task__data task__edit">
-                <button class="task__button button button--transparent" type="button" aria-label="Edit task">
-                  <svg aria-hidden="true">
-                    <use href="img/sprite.svg#edit"></use>
-                  </svg>
-                </button>
-              </td>
-              <td class="task__data task__delete">
-                <button class="task__button button button--transparent" type="button" aria-label="Delete task">
-                  <svg aria-hidden="true">
-                    <use href="img/sprite.svg#trash"></use>
-                  </svg>
-                </button>
-              </td>
-            </tr>
-
-            <tr class="task">
-              <td class="task__data task__complete">
-                <label class="task__checkbox checkbox">
-                  <input class="checkbox__input" type="checkbox" name="checkbox">
-                </label>
-              </td>
-              <td class="task__data task__start">
-                <button class="task__button button" type="button" aria-label="Start focus">
-                  <svg aria-hidden="true">
-                    <use href="img/sprite.svg#start"></use>
-                  </svg>
-                </button>
-              </td>
-              <td class="task__data task__description">
-                <p class="task__name">Go to the gym.</p>
-                <div class="task__pomodoro">
-                  <svg class="task__pomodoro-priority no-priority" aria-hidden="true">
-                    <use href="img/sprite.svg#priority"></use>
-                  </svg>
-                  <span class="task__pomodoro-done">0</span>
-                  <span class="task__pomodoro-divide">/</span>
-                  <div class="task__pomodoro-total">
-                    <svg aria-hidden="true">
-                      <use href="img/sprite.svg#alarm"></use>
-                    </svg>
-                    <span class="task__pomodoro-number">4</span>
-                  </div>
-                </div>
-              </td>
-              <td class="task__data task__edit">
-                <button class="task__button button button--transparent" type="button" aria-label="Edit task">
-                  <svg aria-hidden="true">
-                    <use href="img/sprite.svg#edit"></use>
-                  </svg>
-                </button>
-              </td>
-              <td class="task__data task__delete">
-                <button class="task__button button button--transparent" type="button" aria-label="Delete task">
-                  <svg aria-hidden="true">
-                    <use href="img/sprite.svg#trash"></use>
-                  </svg>
-                </button>
-              </td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="task-wrapper"></div>
       </div>
     </div>
   </div>
